fix(admin-gui): Friendly name is visible * friendly name is visible in attribute edit * added copy button for friendly name

--- a/apps/admin-gui/src/app/shared/components/dialogs/edit-attribute-definition-dialog/edit-attribute-definition-dialog.component.scss
+++ b/apps/admin-gui/src/app/shared/components/dialogs/edit-attribute-definition-dialog/edit-attribute-definition-dialog.component.scss
@@ -2,3 +2,18 @@
   display: flex;
   flex-direction: column;
 }
+
+.urn-name {
+  color: rgba(0, 0, 0, 0.54);
+  margin-bottom: 0px;
+  font-size: small;
+}
+
+.urn-row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.copy-urn {
+  cursor: pointer;
+}
